--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -339,12 +339,12 @@
 </div><!-- /colmask -->
 
 <script type="text/javascript">
-\$(document).ready(function() {
-    \$('#history_retention_select, #history_retention_number').on('change', updateHistoryRetention)
+jQuery(document).ready(function() {
+    jQuery('#history_retention_select, #history_retention_number').on('change', updateHistoryRetention)
     function updateHistoryRetention() {
-        var retention_setting = \$('#history_retention')
-        var retention_select = \$('#history_retention_select').val()
-        var retention_number = \$('#history_retention_number')
+        var retention_setting = jQuery('#history_retention')
+        var retention_select = jQuery('#history_retention_select').val()
+        var retention_number = jQuery('#history_retention_number')
         // Keep all or keep none
         if(retention_select == "0" || retention_select == "-1") {
             retention_number.hide()
@@ -372,24 +372,24 @@
         }
     }
     // Set the history-retention settig
-    var retention_setting_value = \$('#history_retention').val()
+    var retention_setting_value = jQuery('#history_retention').val()
     if(parseInt(retention_setting_value) > 0) {
         // Days or number?
         if(retention_setting_value.indexOf("d") !== -1) {
-            \$('#history_retention_select').val("d")
+            jQuery('#history_retention_select').val("d")
         } else {
-            \$('#history_retention_select').val("n")
+            jQuery('#history_retention_select').val("n")
         }
-        \$('#history_retention_number').val(parseInt(retention_setting_value))
+        jQuery('#history_retention_number').val(parseInt(retention_setting_value))
     } else {
         // Keep all or keep none
-        \$('#history_retention_select').val(retention_setting_value)
-        \$('#history_retention_number').hide()
+        jQuery('#history_retention_select').val(retention_setting_value)
+        jQuery('#history_retention_number').hide()
     }
 
-    \$('.restoreDefaults').click(function(e) {
+    jQuery('.restoreDefaults').click(function(e) {
         // Get section name
-        var sectionName = \$(this).parents('.section').find('.col2 h3').text().trim()
+        var sectionName = jQuery(this).parents('.section').find('.col2 h3').text().trim()
 
         // Confirm?
         if(!confirm("$T('explain-restoreDefaults') \""+sectionName+"\"\n$T('confirm')")) return false
@@ -397,11 +397,11 @@
 
         // Need to get all the input values, so same way as saving normally
         var key_container = {}
-        \$(this).parents('.section').extractFormDataTo(key_container);
+        jQuery(this).parents('.section').extractFormDataTo(key_container);
         key_container = Object.keys(key_container)
 
         // Send request
-        \$.ajax({
+        jQuery.ajax({
             type: "GET",
             url: "../../api",
             data: "mode=set_config_default&apikey=${apikey}&output=json&keyword=" + key_container.join('&keyword=')
